# VariantMedium

./: .gitignore  LICENSE.sourcecode  README.md  build.sh  config.conf  config_hg38.conf  download_ref.sh  environment.yml  environment_et.yml  main.nf  nextflow.config  pairs.tsv  run.conf  setup.cfg  troubleshooting.md  variantmedium.sh
assets/: example_samplesheet.csv
conf/: bam2tensor.config  base.config  modules.config  strelka.config  vcf_postprocessing.config
docs/models/: extra_trees.indel.modelcard.md  extra_trees.snv.modelcard.md
envs/: run.yml
models/: 3ddensenet_indel.modelcard.md  3ddensenet_indel.pt  3ddensenet_snv.modelcard.md  3ddensenet_snv.pt  README.md  extra_trees.snv.modelcard.md  info.txt
modules/multiqc/: environment.yml  main.nf
modules/prepare_inputs/: main.nf
modules/stage_models/: environment.yml  main.nf
modules/stage_refs/: environment.yml  main.nf
scripts/: tsv_header.txt
src/: architecture.py  evaluation.py  pipeline.py  run.py  train_methods.py  utils.py  valid_methods.py
src/dataloaders/: __init__.py  annotated_tensor.py  data_loader.py  input_parsers.py  populator.py
src/filter_candidates/: constants_ml_indel.py  constants_ml_snv.py  extra_trees_functions.py  extra_trees_io.py  filter.py  main.py  merge_snv_indel.py
src/models/: __init__.py
subworkflows/data_staging/: main.nf
workflow/: variantmedium.nf
workflows/: prepare_inputs.nf  variantmedium.nf  variantmedium_call_variants.nf  variantmedium_filter_candidates.nf  variantmedium_prepare_inputs.nf  variantmedium_stage_data.nf
(+10 files in other folders)
