##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = variantmedium
version = 1.1.0
url = https://github.com/TRON-Bioinformatics/variantmedium
author = Özlem Muslu
author_email = oezlem.muslu@tron-mainz.de
maintainer = Özlem Muslu
maintainer_email = oezlem.muslu@tron-mainz.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
;    License :: OSI Approved ::
;license =
description = Models for mutation calling
long_description = file: README.md
keywords =
    Somatic mutation calling
    Somatic variant calling
    Deep learning

[options]
install_requires =
    fire
    numpy
    scipy
    scikit-learn
    pandas
    torch
    tensorboard
# easy_config
python_requires = >=3.9
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = False

[options.extras_require]
tests =


[options.entry_points]
console_scripts =

[options.packages.find]
where = src

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__